--- a/index.html
+++ b/index.html
@@ -58,16 +58,7 @@
 	<p></p>
 
 	<center>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'c646e4c515f2ac8f23b02be1d9817dc3',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c646e4c515f2ac8f23b02be1d9817dc3/invoke.js"></script>
+<!-- Ad code goes here -->
 	
 </center>
 	
@@ -256,6 +247,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
