--- a/Fullschedule/index.html
+++ b/Fullschedule/index.html
@@ -36,16 +36,7 @@
 	<p></p>
 
 	<center>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'c646e4c515f2ac8f23b02be1d9817dc3',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c646e4c515f2ac8f23b02be1d9817dc3/invoke.js"></script>
+<!-- Ad code goes here -->
 	
 </center>
 
@@ -128,6 +119,7 @@
 
 
 </html>
+
 
 
 
