--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Stream live sports in HD quality on Methstreams.world. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface">
-  <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Methstreams">
+	<meta name="description" content="Stream live sports in HD quality on streameast.guru. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface">
+  <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Streameast">
 	<meta name="google-site-verification" content="ObaW_gO_jXDjZnXzCPsWAF67EbB70Bmj8MHE2DwouFA" /> 
     <meta content='632852759a02316e' name='yandex-verification'/>
 	
@@ -19,7 +19,7 @@
   gtag('config', 'G-4VTCY3RX4K');
 </script>
 	
-	<title>Methstreams: Live Sports Streaming | NFL NBA UFC WWE</title>
+	<title>Streameast: Live Sports Streaming | NFL NBA UFC WWE</title>
   
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
@@ -30,7 +30,7 @@
 
   <!-- Site Title Section -->
   <div class="site-title-section">
-    <h1>Methstreams: Live Sports Streaming | NFL NBA UFC WWE</h1>
+    <h1>Streameast: Live Sports Streaming | NFL NBA UFC WWE</h1>
   </div>
 
   <!-- Header Menus -->
@@ -178,7 +178,7 @@
 <div class="contentsection">	
 <p></p>
 <p>
-Are you a passionate sports fan looking for the best platform to watch your favorite games live? Welcome to <strong>Methstreams.world</strong>, the premier destination for live sports streaming. With our user-friendly interface and extensive sports coverage, we bring you closer to the action than ever before. Whether it’s cricket, soccer, NFL, NBA, MMA, or any other popular sport, Methstreams offers a seamless experience tailored just for you.</p><h2 style="text-align: left;">Why Choose Methstreams?</h2><p>At Methstreams, we understand the excitement of live sports and strive to provide uninterrupted, high-quality streams for fans around the world. Here’s why we’re the top choice for sports enthusiasts:</p><h3 style="text-align: left;">1. <strong>Wide Range of Sports Coverage</strong></h3><p>From cricket to basketball, soccer to MMA, and everything in between, we cover it all. Our platform provides live streaming for major events like the Super Bowl, Premier League, NBA games, and more. No matter your favorite sport, Methstreams ensures you never miss a moment of the action.</p><h3 style="text-align: left;">2. <strong>HD-Quality Streams</strong></h3><p>Enjoy high-definition streams with minimal buffering, regardless of your internet speed. Our advanced technology ensures you get the best possible experience, so you can focus on the game without distractions.</p><h3 style="text-align: left;">3. <strong>User-Friendly Interface</strong></h3><p>Navigating Methstreams is effortless. With just a few clicks, you can access your desired sports event. Our intuitive design makes it easy for users to find their favorite games and start streaming instantly.</p><h3 style="text-align: left;">4. <strong>Comprehensive Sports Schedule</strong></h3><p>Stay updated with our regularly updated schedule of live sports events. Whether it’s an NBA showdown, a thrilling UFC fight, or a cricket match, Methstreams keeps you informed about what’s happening and when.</p><h3 style="text-align: left;">5. <strong>Stream Anywhere, Anytime</strong></h3><p>Our platform is compatible with all devices, including desktops, laptops, smartphones, and tablets. Whether you’re at home or on the go, Methstreams ensures you can enjoy live sports streaming wherever you are.</p><h2 style="text-align: left;">What We Offer</h2><ul data-spread="false"><li><p><strong>Cricket</strong>: Watch major cricket leagues like the IPL, PSL, BPL, and Big Bash League.</p></li><li><p><strong>Soccer</strong>: Stream matches from the Premier League, La Liga, and other top leagues.</p></li><li><p><strong>NFL &amp; NBA</strong>: Enjoy live streams of NFL games and NBA showdowns with HD-quality streams.</p></li><li><p><strong>MMA &amp; Boxing</strong>: Don’t miss out on UFC fights and high-stakes boxing matches.</p></li><li><p><strong>Tennis &amp; Hockey</strong>: Follow the excitement of Grand Slam tournaments and NHL games.</p></li></ul><h2 style="text-align: left;">Methstreams’ Commitment to Sports Fans</h2><p>We’re more than just a streaming platform. Methstreams is a comprehensive solution for sports enthusiasts who demand reliable, high-quality access to their favorite games. Our team is dedicated to enhancing your user experience, offering you instant access to live sports events with just a click of a button.</p><h2 style="text-align: left;">Experience Methstreams Today</h2><p>Join the thousands of sports fans who trust Methstreams for their live sports streaming needs. Whether you’re a die-hard NFL fan, a cricket enthusiast, or a casual viewer, Methstreams is your ultimate destination for live sports coverage.</p><p>Start streaming now and enjoy the thrill of live sports like never before. <strong>Methstreams – where the game never stops.</strong></p>
+Are you a passionate sports fan looking for the best platform to watch your favorite games live? Welcome to <strong>streameast.guru</strong>, the premier destination for live sports streaming. With our user-friendly interface and extensive sports coverage, we bring you closer to the action than ever before. Whether it’s cricket, soccer, NFL, NBA, MMA, or any other popular sport, Streameast offers a seamless experience tailored just for you.</p><h2 style="text-align: left;">Why Choose Streameast?</h2><p>At Streameast, we understand the excitement of live sports and strive to provide uninterrupted, high-quality streams for fans around the world. Here’s why we’re the top choice for sports enthusiasts:</p><h3 style="text-align: left;">1. <strong>Wide Range of Sports Coverage</strong></h3><p>From cricket to basketball, soccer to MMA, and everything in between, we cover it all. Our platform provides live streaming for major events like the Super Bowl, Premier League, NBA games, and more. No matter your favorite sport, Streameast ensures you never miss a moment of the action.</p><h3 style="text-align: left;">2. <strong>HD-Quality Streams</strong></h3><p>Enjoy high-definition streams with minimal buffering, regardless of your internet speed. Our advanced technology ensures you get the best possible experience, so you can focus on the game without distractions.</p><h3 style="text-align: left;">3. <strong>User-Friendly Interface</strong></h3><p>Navigating Streameast is effortless. With just a few clicks, you can access your desired sports event. Our intuitive design makes it easy for users to find their favorite games and start streaming instantly.</p><h3 style="text-align: left;">4. <strong>Comprehensive Sports Schedule</strong></h3><p>Stay updated with our regularly updated schedule of live sports events. Whether it’s an NBA showdown, a thrilling UFC fight, or a cricket match, Streameast keeps you informed about what’s happening and when.</p><h3 style="text-align: left;">5. <strong>Stream Anywhere, Anytime</strong></h3><p>Our platform is compatible with all devices, including desktops, laptops, smartphones, and tablets. Whether you’re at home or on the go, Streameast ensures you can enjoy live sports streaming wherever you are.</p><h2 style="text-align: left;">What We Offer</h2><ul data-spread="false"><li><p><strong>Cricket</strong>: Watch major cricket leagues like the IPL, PSL, BPL, and Big Bash League.</p></li><li><p><strong>Soccer</strong>: Stream matches from the Premier League, La Liga, and other top leagues.</p></li><li><p><strong>NFL &amp; NBA</strong>: Enjoy live streams of NFL games and NBA showdowns with HD-quality streams.</p></li><li><p><strong>MMA &amp; Boxing</strong>: Don’t miss out on UFC fights and high-stakes boxing matches.</p></li><li><p><strong>Tennis &amp; Hockey</strong>: Follow the excitement of Grand Slam tournaments and NHL games.</p></li></ul><h2 style="text-align: left;">Streameast’ Commitment to Sports Fans</h2><p>We’re more than just a streaming platform. Streameast is a comprehensive solution for sports enthusiasts who demand reliable, high-quality access to their favorite games. Our team is dedicated to enhancing your user experience, offering you instant access to live sports events with just a click of a button.</p><h2 style="text-align: left;">Experience Streameast Today</h2><p>Join the thousands of sports fans who trust Streameast for their live sports streaming needs. Whether you’re a die-hard NFL fan, a cricket enthusiast, or a casual viewer, Streameast is your ultimate destination for live sports coverage.</p><p>Start streaming now and enjoy the thrill of live sports like never before. <strong>Streameast – where the game never stops.</strong></p>
 	
 </div>	
 	
@@ -223,7 +223,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 	  <li><a href="/DMCA/">DMCA</a></li>
 	  <li><a href="/Contact/">Contact Us</a></li>
   </ul>
-  <p>© 2025 Methstreams.World. All rights reserved.</p>
+  <p>© 2025 streameast.guru. All rights reserved.</p>
 
 <script src="script.js"></script>
 	  
@@ -235,7 +235,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/methstreamsapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/Streameastapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -247,6 +247,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
