--- a/Aussie/index.html
+++ b/Aussie/index.html
@@ -7,8 +7,6 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/style.css">
   
-  
-
 </head>
 <body>
 <div class="site-title-section">
@@ -104,7 +102,7 @@
 	  <li><a href="/DMCA/">DMCA</a></li>
 	  <li><a href="/Contact/">Contact Us</a></li>
   </ul>
-  <p>© 2025 Methstreams.World. All rights reserved.</p>
+  <p>© 2025 streameast.guru. All rights reserved.</p>
   </footer>
 
 
@@ -114,7 +112,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/methstreamsapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/Streameastapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -133,6 +131,7 @@
 
 
 </html>
+
 
 
 
