--- a/Baseball/index.html
+++ b/Baseball/index.html
@@ -104,7 +104,7 @@
 	  <li><a href="/DMCA/">DMCA</a></li>
 	  <li><a href="/Contact/">Contact Us</a></li>
   </ul>
-  <p>© 2025 Methstreams.World. All rights reserved.</p>
+  <p>© 2025 streameast.guru. All rights reserved.</p>
   </footer>
 
 
@@ -114,7 +114,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/methstreamsapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/Streameastapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -133,6 +133,7 @@
 
 
 </html>
+
 
 
 
