--- a/Fullschedule/index.html
+++ b/Fullschedule/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Methstreams Full Schedule and Live Streams</title>
+  <title>Streameast Full Schedule and Live Streams</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/style.css">
   
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="site-title-section">
-<h1>Methstreams Full Schedule and Live Streams</h1>
+<h1>Streameast Full Schedule and Live Streams</h1>
 </div>
 
 
@@ -90,7 +90,7 @@
 	  <li><a href="/DMCA/">DMCA</a></li>
 	  <li><a href="/Contact/">Contact Us</a></li>
   </ul>
-  <p>© 2025 Methstreams.World. All rights reserved.</p>
+  <p>© 2025 streameast.guru. All rights reserved.</p>
   </footer>
 
 
@@ -100,7 +100,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/methstreamsapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/Streameastapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -119,6 +119,7 @@
 
 
 </html>
+
 
 
 
