--- a/Premier/index.html
+++ b/Premier/index.html
@@ -39,14 +39,14 @@
 	<center>
 <script type="text/javascript">
 	atOptions = {
-		'key' : 'c646e4c515f2ac8f23b02be1d9817dc3',
+		'key' : 'f1a48532f479213bd792812a297ae53d',
 		'format' : 'iframe',
 		'height' : 250,
 		'width' : 300,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c646e4c515f2ac8f23b02be1d9817dc3/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f1a48532f479213bd792812a297ae53d/invoke.js"></script>
 	
 </center>
 	
@@ -102,7 +102,7 @@
 	  <li><a href="/DMCA/">DMCA</a></li>
 	  <li><a href="/Contact/">Contact Us</a></li>
   </ul>
-  <p>© 2025 Methstreams.World. All rights reserved.</p>
+  <p>© 2025 streameast.guru. All rights reserved.</p>
   </footer>
 
 
@@ -112,7 +112,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/methstreamsapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/Streameastapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -131,6 +131,7 @@
 
 
 </html>
+
 
 
 
