--- a/Snooker/index.html
+++ b/Snooker/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Watch Snooker Free Streams - Methstreams</title>
+  <title>Watch Snooker Free Streams - Streameast</title>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/style.css">
   
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="site-title-section">
-<h1>Watch Snooker Free Streams - Methstreams</h1>
+<h1>Watch Snooker Free Streams - Streameast</h1>
 </div>
 
 
@@ -38,14 +38,14 @@
 	<center>
 <script type="text/javascript">
 	atOptions = {
-		'key' : 'c646e4c515f2ac8f23b02be1d9817dc3',
+		'key' : 'f1a48532f479213bd792812a297ae53d',
 		'format' : 'iframe',
 		'height' : 250,
 		'width' : 300,
 		'params' : {}
 	};
 </script>
-<script type="text/javascript" src="//www.highperformanceformat.com/c646e4c515f2ac8f23b02be1d9817dc3/invoke.js"></script>
+<script type="text/javascript" src="//www.highperformanceformat.com/f1a48532f479213bd792812a297ae53d/invoke.js"></script>
 	
 </center>
 
@@ -104,7 +104,7 @@
 	  <li><a href="/DMCA/">DMCA</a></li>
 	  <li><a href="/Contact/">Contact Us</a></li>
   </ul>
-  <p>© 2025 Methstreams.World. All rights reserved.</p>
+  <p>© 2025 streameast.guru. All rights reserved.</p>
   </footer>
 
 
@@ -114,7 +114,7 @@
     
     <span class="emoji">📲</span>
     <span class="cta-text">Get the App!</span>
-    <a href="https://tinyurl.com/methstreamsapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
+    <a href="https://tinyurl.com/Streameastapk" class="download-btn" rel="nofollow" target="_blank">⬇ Download</a>
     
   </div>
   <span id="close-ad">&#10060;</span>
@@ -133,6 +133,7 @@
 
 
 </html>
+
 
 
 
