--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	
 	   
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4VTCY3RX4K"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JG9CWC86LJ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4VTCY3RX4K');
+  gtag('config', 'G-JG9CWC86LJ');
 </script>
 	
 	<title>Streameast: Live Sports Streaming | NFL NBA UFC WWE</title>
@@ -247,6 +247,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
