--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <section>
       <h2>Ice Hockey</h2>
       <div class="categories-grid">
+		  <a href="/NHL/">NHL</a>
         <a href="/NLA/">NLA</a>
         <a href="/SHL/">SHL</a>
 		<a href="/Ice/">More &rarr;</a>
@@ -247,6 +248,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
