--- a/index.html
+++ b/index.html
@@ -346,10 +346,151 @@
 
 <script src="mobiledetectscript.js"></script>
 
+
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "What is Streameast?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Streameast is a free online streaming platform that covers a wide range of sports, including NFL, NBA, UFC, soccer, MLB, NHL, WWE, and more."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I watch NFL games on Streameast?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, with NFL Streameast, fans can watch live NFL games, playoffs, and even the Super Bowl without cable subscriptions."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Does Streameast cover NBA games?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Absolutely. NBA Streameast provides live streams of all major NBA games, including playoffs and the NBA Finals."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is the Streameast app available for mobile users?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, the Streameast app or mobile site allows fans to watch live sports on smartphones and tablets."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is Streameast safe to use?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "While Streameast itself is popular, some mirror sites may include ads or unsafe content. Using a VPN and antivirus software is recommended."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Does Streameast show college basketball games?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, Streameast college basketball streams NCAA games and March Madness events for fans of college-level sports."
+      }
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Streameast",
+  "url": "https://streameast.guru/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://streameast.guru/?s={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Streameast",
+  "url": "https://streameast.guru/",
+  "logo": "https://streameast.guru/favicon.ico",
+  "sameAs": [
+    "https://twitter.com/", 
+    "https://facebook.com/",
+    "https://instagram.com/"
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "BreadcrumbList",
+  "itemListElement": [
+    {
+      "@type": "ListItem",
+      "position": 1,
+      "name": "Home",
+      "item": "https://streameast.guru/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 2,
+      "name": "NFL",
+      "item": "https://streameast.guru/NFL/"
+    },
+    {
+      "@type": "ListItem",
+      "position": 3,
+      "name": "NBA",
+      "item": "https://streameast.guru/NBA/"
+    }
+  ]
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Article",
+  "headline": "Streameast - Live Sports Streaming | NFL NBA UFC WWE",
+  "description": "Stream live sports in HD quality on Streameast. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface.",
+  "image": "https://streameast.guru/favicon.ico",
+  "author": {
+    "@type": "Organization",
+    "name": "Streameast"
+  },
+  "publisher": {
+    "@type": "Organization",
+    "name": "Streameast",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://streameast.guru/favicon.ico"
+    }
+  },
+  "url": "https://streameast.guru/",
+  "datePublished": "2025-09-17",
+  "dateModified": "2025-09-17"
+}
+</script>
+
 	
 
 </body>
 </html>
+
 
 
 
