--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	
   <meta charset="UTF-8">
+	
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="canonical" href="https://crackstreams.help/"/>
+
 	<meta name="description" content="Stream live sports in HD quality on streameast.guru. Enjoy NFL, NBA, Cricket, Soccer, UFC, and more with a user-friendly interface">
   <meta name="keywords" content="live sports streaming, NFL live, NBA live, cricket live, soccer live, UFC live, Streameast">
 	<meta name="google-site-verification" content="p-7-X5IVczaE4tVt_uJGj0fulK5ODVcn7Xx7fh5n70Q" /> 
@@ -499,6 +503,7 @@
 
 </body>
 </html>
+
 
 
 
