--- a/index.html
+++ b/index.html
@@ -62,16 +62,7 @@
 	<p></p>
 
 	<center>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'f1a48532f479213bd792812a297ae53d',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.highperformanceformat.com/f1a48532f479213bd792812a297ae53d/invoke.js"></script>
+<!-- Banner Ad goes here -->
 	
 </center>
 	
@@ -503,6 +494,7 @@
 
 </body>
 </html>
+
 
 
 
