--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	
 	   
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JG9CWC86LJ"></script>
-<script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JG9CWC86LJ" defer></script>
+<script defer>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -230,7 +230,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
   </ul>
   <p>© 2025 streameast.guru. All rights reserved.</p>
 
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 	  
   </footer>
 
@@ -246,7 +246,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
   <span id="close-ad">&#10060;</span>
 </div>
 
-<script src="mobiledetectscript.js"></script>
+<script src="mobiledetectscript.js" defer></script>
 
 
 
@@ -256,6 +256,7 @@ Are you a passionate sports fan looking for the best platform to watch your favo
 
 </body>
 </html>
+
 
 
 
